--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "bin": {
-    "create-prettier": "index.js"
-  },
+  "bin": "./index.js",
   "name": "@leepster/create-prettier",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leepster/create-prettier.git"
   },
   "keywords": [],
   "author": "",
