--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "bin": "./index.js",
   "name": "@leepster/create-prettier",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
