--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "bin": "./index.js",
   "name": "@leepster/create-prettier",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +20,6 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
-    "@leepster/node-console": "^1.0.1"
+    "chalk": "^5.0.0"
   }
 }
