--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "bin": "./index.js",
   "name": "@leepster/create-prettier",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
